--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Polaria-Launcher",
-    "preductname": "Polaria Launcher",
-    "version": "1.0.2",
+    "name": "Polariav1-Launcher",
+    "preductname": "Polariav1 Launcher",
+    "version": "1.0.3",
     "description": "Launcher Mincraft pour le serveur Polaria",
     "main": "src/app.js",
     "author": {
